--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/stack": "^5.14.5",
     "apisauce": "^2.1.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@react-navigation/native": "^5.9.4",
     "dotenv": "^10.0.0"
   },
   "private": true
