--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-scroll-menu": "^1.0.3",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4"
   },
