--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@react-navigation/native": "^5.9.4",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "private": true
 }
