--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.9.0",
     "@react-navigation/native": "^5.9.4",
     "dotenv": "^10.0.0",
+    "expo-image-picker": "^10.1.4",
     "react-native-vector-icons": "^8.1.0"
   },
   "private": true
